--- a/fairygirl.html
+++ b/fairygirl.html
@@ -22,8 +22,11 @@
                 <span class="d-block d-lg-none">Fairygirl</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="images/fairygirl.png" alt="Man standing in front of the Golden Gate Bridge" /></span>
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-        </nav>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav">
+                    <li class="nav-item">Fairygirl</li>
+                </ul>
+            </div>        </nav>
         <!-- Page Content-->
         <div class="container-fluid p-0">
             <!-- About-->
