--- a/fairygirl.html
+++ b/fairygirl.html
@@ -19,8 +19,8 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Fairygirl</span>
-                <span class="d-none d-lg-block navbar-logo"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="images/fairygirl.png" alt="Fairygirl profile picture." /></span>
+                <span class="d-none d-md-block">Fairygirl</span>
+                <span class="d-none d-md-block navbar-logo"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="images/fairygirl.png" alt="Fairygirl profile picture." /></span>
             </a>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
@@ -35,7 +35,7 @@
                     <h1 class="mb-0">
                         Fairygirl
                     </h1>
-                    <span class="d-sm-block d-none">
+                    <span class="d-sm-block d-md-none">
                          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="images/fairygirl.png" alt="Fairygirl profile picture." />
                     </span>
                     <div class="social-icons">
