--- a/fairygirl.html
+++ b/fairygirl.html
@@ -34,7 +34,7 @@
                     <h1 class="mb-0">
                         Fairygirl
                     </h1>
-                    <span class="d-sm-block d-md-none">
+                    <span class="d-md-block d-lg-none">
                          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="images/fairygirl.png" alt="Fairygirl profile picture." />
                     </span>
                     <div class="social-icons">
