--- a/fairygirl.html
+++ b/fairygirl.html
@@ -37,11 +37,14 @@
                     <span class="d-md-block d-lg-none">
                          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="images/fairygirl.png" alt="Fairygirl profile picture." />
                     </span>
+                    <div>
+                        <audio id="cuwute" src="sounds/cuwute.mp3"></audio>
+                        <button class="button" onclick="document.getElementById('cuwute').play()">cuwute</button>
+                    </div>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="#!"><i class="fab fa-twitch"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="#!"><i class="fab fa-youtube"></i></a>
                     </div>
                 </div>
             </section>
