--- a/fairygirl.html
+++ b/fairygirl.html
@@ -39,7 +39,7 @@
                     </span>
                     <div>
                         <audio id="cuwute" src="sounds/cuwute.mp3"></audio>
-                        <button class="button" onclick="document.getElementById('cuwute').play()">cuwute</button>
+                        <button type="button" class="btn btn-primary" onclick="document.getElementById('cuwute').play()">cuwute</button>
                     </div>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-twitch"></i></a>
