--- a/fairygirl.html
+++ b/fairygirl.html
@@ -40,6 +40,10 @@
                     <div>
                         <audio id="cuwute" src="sounds/cuwute.mp3"></audio>
                         <button type="button" class="btn btn-primary" onclick="document.getElementById('cuwute').play()">cuwute</button>
+                        <audio id="cuwute" src="sounds/cuwute.mp3"></audio>
+                        <button type="button" class="btn btn-primary" onclick="document.getElementById('cuwute').play()">cuwute</button>
+                        <audio id="cuwute" src="sounds/cuwute.mp3"></audio>
+                        <button type="button" class="btn btn-primary" onclick="document.getElementById('cuwute').play()">cuwute</button>
                     </div>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-twitch"></i></a>
