--- a/fairygirl.html
+++ b/fairygirl.html
@@ -23,7 +23,7 @@
             </a>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
-                    <li class="nav-item bs-white">Fairygirl</li>
+                    <li class="nav-item text-white">Fairygirl</li>
                 </ul>
             </div>        </nav>
         <!-- Page Content-->
