--- a/fairygirl.html
+++ b/fairygirl.html
@@ -25,12 +25,13 @@
                 <ul class="navbar-nav">
                     <li class="nav-item text-white">Fairygirl</li>
                 </ul>
-                <div class="social-icons">
-                    <a class="social-icon" href="#!"><i class="fab fa-twitch"></i></a>
-                    <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                    <a class="social-icon" href="#!"><i class="fab fa-youtube"></i></a>
-                </div>
-            </div>        </nav>
+            </div>  
+            <div class="social-icons">
+                <a class="social-icon" href="#!"><i class="fab fa-twitch"></i></a>
+                <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
+                <a class="social-icon" href="#!"><i class="fab fa-youtube"></i></a>
+            </div>
+        </nav>
         <!-- Page Content-->
         <div class="container-fluid p-0">
             <!-- About-->
