--- a/fairygirl.html
+++ b/fairygirl.html
@@ -19,6 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
+                <span class="d-md-block d-none">Fairygirl</span>
                 <span class="d-none d-lg-block navbar-logo"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="images/fairygirl.png" alt="Fairygirl profile picture." /></span>
             </a>
             <div class="collapse navbar-collapse" id="navbarResponsive">
