--- a/fairygirl.html
+++ b/fairygirl.html
@@ -51,7 +51,8 @@
                     
                     <div class="fg-content bg-image" style="background-image: url(images/fgrainbow.png); height: 100vh; background-repeat:no-repeat; background-position: top; background-size: cover;">
                         <div class="fg-sounds">
-                            <button data-audio="sounds/cringe.mp3">cringe</button>
+                            <button data-audio="sounds/Animal crossing catch a fish noise.mp3" class="sound">Animal crossing catch a fish noise</button>
+                            <button data-audio="sounds/cringe.mp3" class="sound">cringe</button>
                             <button data-audio="sounds/cuwute.mp3" class="sound">cuwute</button>
                             <button data-audio="sounds/giggle.mp3" class="sound">giggle</button>
                             <button data-audio="sounds/hehe.mp3" class="sound">hehe</button>
