--- a/fairygirl.html
+++ b/fairygirl.html
@@ -70,6 +70,8 @@
 
                             <button data-audio="sounds/awoo.mp3" class="sound btn btn-primary">awoo</button>
 
+                            <button data-audio="sounds/awoo2.mp3" class="sound btn btn-primary">awoo2</button>
+
                             <button data-audio="sounds/baka.mp3" class="sound btn btn-primary">baka</button>
 
                             <button data-audio="sounds/baka2.mp3" class="sound btn btn-primary">baka2</button>
