--- a/fairygirl.html
+++ b/fairygirl.html
@@ -15,6 +15,7 @@
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="styles.css" rel="stylesheet" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <link rel="shortcut icon" type="image/jpg" href="images/favicon.ico"/>
     </head>
     <body id="page-top">
         <!-- class="bg-image" style="background-image: url(images/fgrainbow.png); height: 100%; background-repeat:no-repeat; background-position: top; background-size: cover"; -->
