added submission form and edited link targetting

--- a/fairygirl.html
+++ b/fairygirl.html
@@ -40,9 +40,9 @@
                 </ul>
             </div>  
             <div class="social-icons">
-                <a class="social-icon" href="https://www.twitch.tv/fairygirl"><i class="fab fa-twitch"></i></a>
-                <a class="social-icon" href="https://twitter.com/LoLFairyGirl"><i class="fab fa-twitter"></i></a>
-                <a class="social-icon" href="https://www.youtube.com/channel/UC5Miqcc_URGFv-fpXprXZCw"><i class="fab fa-youtube"></i></a>
+                <a class="social-icon" href="https://www.twitch.tv/fairygirl" target="_blank"><i class="fab fa-twitch"></i></a>
+                <a class="social-icon" href="https://twitter.com/LoLFairyGirl" target="_blank"><i class="fab fa-twitter"></i></a>
+                <a class="social-icon" href="https://www.youtube.com/channel/UC5Miqcc_URGFv-fpXprXZCw" target="_blank"><i class="fab fa-youtube"></i></a>
             </div>
         </nav>
         <!-- Page Content-->
@@ -450,6 +450,9 @@
                             <br>
                             <br>
                             <br>
+
+                            <p>If you would like to submit a clip, <a href="https://forms.gle/gJbTPgtCniL8aeXw7" target="_blank">click here</a> to be taken to a submission form</p>
+
                             <br>
                             <br>
                             <br>
