--- a/lolquiz.html
+++ b/lolquiz.html
@@ -39,7 +39,7 @@
                 <hr>
                 <p id="question"></p>
                 <audio id="sfx-playa" controls>
-                    <source src="lolsound/Urgot_Ban.ogg" id="track">
+                    <source src="https://static.wikia.nocookie.net/leagueoflegends/images/4/43/Urgot_Ban.ogg/revision/latest?cb=20200810160707" id="track">
                 </audio>
 
                 <!-- <div class="audio-player justify-content-center">
