--- a/lolquiz.html
+++ b/lolquiz.html
@@ -38,8 +38,125 @@
                 <h2 class="mobile-only">This quiz currently does not play audio on phones, so it can't reasonably be played, sorry!</h2>
                 <hr>
                 <p id="question"></p>
-                <audio id="sfx-playa" controls>
-                    <source src="https://static.wikia.nocookie.net/leagueoflegends/images/4/43/Urgot_Ban.ogg/revision/latest?cb=20200810160707" id="track">
+                <audio id="sfx-playa0" controls>
+                    <source src="lolsound/Urgot_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa1" controls>
+                    <source src="lolsound/Zed_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa2" controls>
+                    <source src="lolsound/ChoGath_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa3" controls>
+                    <source src="lolsound/Diana_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa4" controls>
+                    <source src="lolsound/Ezreal_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa5" controls>
+                    <source src="lolsound/Aatrox_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa6" controls>
+                    <source src="lolsound/Amumu_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa7" controls>
+                    <source src="lolsound/Darius_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa8" controls>
+                    <source src="lolsound/Jhin_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa9" controls>
+                    <source src="lolsound/Cassiopeia_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa10" controls>
+                    <source src="lolsound/Lulu_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa11" controls>
+                    <source src="lolsound/Ahri_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa12" controls>
+                    <source src="lolsound/Lux_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa13" controls>
+                    <source src="lolsound/Braum_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa14" controls>
+                    <source src="lolsound/Qiyana_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa15" controls>
+                    <source src="lolsound/Corki_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa16" controls>
+                    <source src="lolsound/Pyke_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa17" controls>
+                    <source src="lolsound/Seraphine_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa18" controls>
+                    <source src="lolsound/Rammus_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa19" controls>
+                    <source src="lolsound/Camille_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa20" controls>
+                    <source src="lolsound/Caitlyn_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa21" controls>
+                    <source src="lolsound/Elise_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa22" controls>
+                    <source src="lolsound/BelVeth_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa23" controls>
+                    <source src="lolsound/Aphelios_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa24" controls>
+                    <source src="lolsound/Evelynn_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa25" controls>
+                    <source src="lolsound/Azir_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa26" controls>
+                    <source src="lolsound/Ashe_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa27" controls>
+                    <source src="lolsound/Blitzcrank_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa28" controls>
+                    <source src="lolsound/AurelionSol_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa29" controls>
+                    <source src="lolsound/Anivia_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa30" controls>
+                    <source src="lolsound/Bard_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa31" controls>
+                    <source src="lolsound/Morgana_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa32" controls>
+                    <source src="lolsound/Ekko_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa33" controls>
+                    <source src="lolsound/Annie_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa34" controls>
+                    <source src="lolsound/Akshan_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa35" controls>
+                    <source src="lolsound/Brand_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa36" controls>
+                    <source src="lolsound/Alistar_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa37" controls>
+                    <source src="lolsound/Poppy_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa38" controls>
+                    <source src="lolsound/Draven_ban.ogg" id="track">
+                </audio>
+                <audio class="show-hide" id="sfx-playa39" controls>
+                    <source src="lolsound/Akali_ban.ogg" id="track">
                 </audio>
 
                 <!-- <div class="audio-player justify-content-center">
