wiki sounds again

--- a/lolquiz.html
+++ b/lolquiz.html
@@ -39,10 +39,10 @@
                 <hr>
                 <p id="question"></p>
                 <audio id="sfx-playa0" controls>
-                    <source src="lolsound/Urgot_ban.ogg" id="track">
+                    <source src="https://static.wikia.nocookie.net/leagueoflegends/images/4/43/Urgot_Ban.ogg/revision/latest?cb=20200810160707" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa1" controls>
-                    <source src="lolsound/Zed_ban.ogg" id="track">
+                    <source src="https://static.wikia.nocookie.net/leagueoflegends/images/c/c3/Zed_Ban.ogg/revision/latest?cb=20200321161855" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa2" controls>
                     <source src="lolsound/ChoGath_ban.ogg" id="track">
