starring at the ceiling

--- a/lolquiz.html
+++ b/lolquiz.html
@@ -38,7 +38,7 @@
                 <h2 class="mobile-only">This quiz currently does not play audio on phones, so it can't reasonably be played, sorry!</h2>
                 <hr>
                 <p id="question"></p>
-                <audio id="sfx-playa" controls>
+                <audio id="sfx-playa0" controls>
                     <source src="lolsound/Urgot_ban.ogg" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa1" controls>
