lets try that again

--- a/lolquiz.html
+++ b/lolquiz.html
@@ -39,10 +39,10 @@
                 <hr>
                 <p id="question"></p>
                 <audio id="sfx-playa0" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/https://github.com/L42cf/projects/blob/main/lolsound/Urgot_Ban.ogg?raw=true?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Urgot_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa1" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/https://github.com/L42cf/projects/blob/main/lolsound/Zed_Ban.ogg?raw=true?raw=true" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/https://github.com/L42cf/projects/blob/main/lolsound/Zed_Ban.ogg?" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa2" controls>
                     <source src="https://github.com/L42cf/projects/blob/main/lolsound/ChoGath_ban.ogg?raw=true" id="track">
