--- a/lolquiz.html
+++ b/lolquiz.html
@@ -42,7 +42,7 @@
                     <source src="https://github.com/L42cf/projects/blob/main/lolsound/Urgot_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa1" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/https://github.com/L42cf/projects/blob/main/lolsound/Zed_Ban.ogg?" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Zed_Ban.ogg?" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa2" controls>
                     <source src="https://github.com/L42cf/projects/blob/main/lolsound/ChoGath_Ban.ogg?raw=true" id="track">
@@ -157,7 +157,7 @@
                 </audio>
                 <audio class="show-hide" id="sfx-playa39" controls>
                     <source src="https://github.com/L42cf/projects/blob/main/lolsound/Akali_Ban.ogg?raw=true" id="track">
-                </audio>https://github.com/L42cf/projects/blob/main/lolsound/Akali_Ban.ogg?raw=true
+                </audio>
 
                 <!-- <div class="audio-player justify-content-center">
                     <audio id="playa" controls>
