--- a/lolquiz.html
+++ b/lolquiz.html
@@ -42,7 +42,7 @@
                     <source src="https://github.com/L42cf/projects/blob/main/lolsound/Urgot_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa1" controls>
-                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Zed_Ban.ogg?" id="track">
+                    <source src="https://github.com/L42cf/projects/blob/main/lolsound/Zed_Ban.ogg?raw=true" id="track">
                 </audio>
                 <audio class="show-hide" id="sfx-playa2" controls>
                     <source src="https://github.com/L42cf/projects/blob/main/lolsound/ChoGath_Ban.ogg?raw=true" id="track">
