--- a/lolquiz.html
+++ b/lolquiz.html
@@ -22,7 +22,7 @@
                 <span class="d-block d-lg-none">LoL Voice Lines Quiz</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2 nav-item" src="lolportraits/yuh.jpg" alt="Man standing in front of the Golden Gate Bridge" /></span>
             </span>
-            <button class="navbar-togg?raw=trueler" type="button" data-bs-togg?raw=truele="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Togg?raw=truele navigation"><span class="navbar-togg?raw=trueler-icon"></span></button>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link-quiz js-scroll-trigger" href="lolquiz.html">Quiz</a></li>
